WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
194038
WasmB3IRGenerator models some effects incorrectly
https://bugs.webkit.org/show_bug.cgi?id=194038
Summary
WasmB3IRGenerator models some effects incorrectly
Saam Barati
Reported
2019-01-30 13:24:58 PST
...
Attachments
WIP
(3.81 KB, patch)
2019-01-30 13:25 PST
,
Saam Barati
no flags
Details
Formatted Diff
Diff
patch
(5.09 KB, patch)
2019-02-17 11:58 PST
,
Saam Barati
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Saam Barati
Comment 1
2019-01-30 13:25:51 PST
Created
attachment 360607
[details]
WIP
Saam Barati
Comment 2
2019-02-17 11:58:23 PST
Created
attachment 362240
[details]
patch
Keith Miller
Comment 3
2019-02-17 13:20:30 PST
Comment on
attachment 362240
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=362240&action=review
> Source/JavaScriptCore/wasm/WasmB3IRGenerator.cpp:-320 > - patchpoint->append(instanceValue(), ValueRep::SomeRegister);
How did this ever work?... I guess we just usually don’t take this path and/or B3 rematerialized the value?
Saam Barati
Comment 4
2019-02-17 20:13:14 PST
Comment on
attachment 362240
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=362240&action=review
>> Source/JavaScriptCore/wasm/WasmB3IRGenerator.cpp:-320 >> - patchpoint->append(instanceValue(), ValueRep::SomeRegister); > > How did this ever work?... I guess we just usually don’t take this path and/or B3 rematerialized the value?
Dunno. Maybe the non-Darwin ports aren’t testing Wasm?
WebKit Commit Bot
Comment 5
2019-02-17 20:40:19 PST
Comment on
attachment 362240
[details]
patch Clearing flags on attachment: 362240 Committed
r241657
: <
https://trac.webkit.org/changeset/241657
>
WebKit Commit Bot
Comment 6
2019-02-17 20:40:21 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 7
2019-02-17 20:41:21 PST
<
rdar://problem/48153007
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug